[package]
name = "yt-grab"
version = "0.1.0"
description = "Cross-platform video & audio downloader built on Tauri 2 and yt-dlp"
authors = ["Abhishek Paul Thotakura <tabhishekpaul@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yt_grab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tokio = { version = "1", features = ["time", "process", "io-util", "rt", "macros", "sync"] }
lzma-rs = "0.3"
tar = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
